fix: 修复群消息存储监听器缺少@RabbitListener注解和断线离线处理被注释的问题
1. StoreGroupMessageReceiver 添加 @RabbitListener 注解，群聊消息持久化功能恢复正常
2. NettyServerHandler 取消 channelInactive 注释，断线后正确清理Session并广播离线状态
3. Base64URL 从废弃的 sun.misc API 迁移到 java.util.Base64（Java 11兼容）
4. 移除 im-codec 和 im-message-store pom.xml 中冗余的父POM依赖声明

Co-Authored-By: AtomCode (deepseek-v4-flash) <noreply@atomgit.com>