@@ -1,9 +1,8 @@
 package com.lip.im.model.utils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 /**
  * @description:
@@ -12,7 +11,7 @@ import java.nio.charset.Charset;
  */
 public class Base64URL {
     public static byte[] base64EncodeUrl(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes();
+        byte[] base64 = Base64.getEncoder().encode(input);
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -31,7 +30,7 @@ public class Base64URL {
     }
 
     public static byte[] base64EncodeUrlNotReplace(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes(Charset.forName("UTF-8"));
+        byte[] base64 = Base64.getEncoder().encodeToString(input).getBytes(StandardCharsets.UTF_8);
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -64,7 +63,7 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(new String(input,"UTF-8"));
+        return Base64.getDecoder().decode(new String(input, "UTF-8"));
     }
 
     public static byte[] base64DecodeUrl(byte[] input) throws IOException {
@@ -83,6 +82,6 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(base64.toString());
+        return Base64.getDecoder().decode(new String(base64, "UTF-8"));
     }
 }
